[package]
name = "tls"
version = "0.1.0"
authors = ["Abhimanyu Agarwal <agarw184@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
untrusted = "0.3.1"
time = "0.1.35"
mio = "0.5.1"
base64 = "~0.2.0"
log = "0.3.6"
ring = { version = "0.3", features = ["rsa_signing"] }
webpki = "0.2.1"

[dev-dependencies]
env_logger = "0.3.3"
mio = "0.5.1"
docopt = "0.6"
rustc-serialize = "0.3"